{
    "name": "PlayerInput",
    "maps": [
        {
            "name": "RTS",
            "id": "2222fb85-a5a8-47a8-97d3-bcf20950b3bc",
            "actions": [
                {
                    "name": "MainAction",
                    "type": "Button",
                    "id": "e93a4586-3b98-4059-933f-0d07257c3157",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SecondaryAction",
                    "type": "Button",
                    "id": "97be64c9-4675-487e-b437-02843ad63a14",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "UnitSelection",
                    "type": "Button",
                    "id": "99204107-23e4-4721-bcbe-d607e8d496d6",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ControlModifier",
                    "type": "Button",
                    "id": "73c12ace-e7c3-469f-be6f-364e2705a2a7",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "bc5d36ed-5090-4e8c-b316-e471b61f80a9",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "RTS",
                    "action": "MainAction",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b88c2f4c-6753-4053-b20d-111a296a5578",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "RTS",
                    "action": "SecondaryAction",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e37cf597-d7f7-40ed-84a6-a84e7b9d3730",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "UnitSelection",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ab422fd3-e0dd-467e-92b5-10d35c3a9844",
                    "path": "<Keyboard>/ctrl",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ControlModifier",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "RTS",
            "bindingGroup": "RTS",
            "devices": []
        }
    ]
}